Fix card layout issue #128
Make sure that the card box (visible on hover) covers the whole avatar

--- a/source/stylesheets/objects/_card.sass
+++ b/source/stylesheets/objects/_card.sass
@@ -2,6 +2,9 @@
   position: relative
   margin-bottom: $base-spacing-unit
 
+.card-avatar
+  display: block
+
 .card-box
   position: absolute
   top: 0
